// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins/ViewportBlock Overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-1p18zt3-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-7mlh6m"
              >
                <div
                  class="css-12hibeq"
                >
                  <button
                    class="css-j69xip"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-1ur9rf0-ViewportBlock"
            >
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-15d0u84-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  320px
                </div>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1hn9bra-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  375px
                </div>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-rjnfu8-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  768px
                </div>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-c9jte9-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  1024px
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/ViewportBlock Sizes 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-1p18zt3-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-7mlh6m"
              >
                <div
                  class="css-12hibeq"
                >
                  <button
                    class="css-j69xip"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-1ur9rf0-ViewportBlock"
            >
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-14pf0of-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  xsmall
                </div>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1s1p44s-BlockContainer"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-1p18zt3-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="hoverbox-text css-1cgogy4"
                >
                  small
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
